--- a/.github/workflows/backend_deploy_workflow.yaml
+++ b/.github/workflows/backend_deploy_workflow.yaml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Deploy migration job
         run: |
-          gcloud beta run jobs deploy migrations \
+          gcloud run jobs deploy migrations \
             --quiet \
             --image=${{ env.IMAGE }} \
             --region="europe-west1" \
@@ -85,30 +85,9 @@ jobs:
             --image=${{ env.IMAGE }} \
             --region="europe-west1"
 
-      - name: Deploy execute scheduled scenario job
-        run: |
-          gcloud beta run jobs deploy scheduled-executer \
-            --quiet \
-            --image=${{ env.IMAGE }} \
-            --region="europe-west1"
-
       - name: Deploy execute async worker service
         run: |
-          gcloud beta run deploy marble-backend-worker \
+          gcloud run deploy marble-backend-worker \
             --quiet \
             --image=${{ env.IMAGE }} \
             --region="europe-west1"
-
-      - name: Deploy data ingestion job
-        run: |
-          gcloud beta run jobs deploy data-ingestion \
-            --quiet \
-            --image=${{ env.IMAGE }} \
-            --region="europe-west1" \
-
-      - name: Deploy webhook retry
-        run: |
-          gcloud beta run jobs deploy retry-webhooks \
-            --quiet \
-            --image=${{ env.IMAGE }} \
-            --region="europe-west1" \
