opensanctions: allow match by passportNumber rather than idNumber
fix

--- a/pubapi/openapi/v1.yml
+++ b/pubapi/openapi/v1.yml
@@ -1154,7 +1154,7 @@ components:
               type: string
             birthDate:
               type: string
-            idNumber:
+            passportNumber:
               type: string
             address:
               type: string
