--- a/specs/v1_public_api.yaml
+++ b/specs/v1_public_api.yaml
@@ -596,7 +596,7 @@ components:
               type: string
             birthDate:
               type: string
-            idNumber:
+            passportNumber:
               type: string
             address:
               type: string
