--- a/pubapi/tests/fixtures/decisions.yml
+++ b/pubapi/tests/fixtures/decisions.yml
@@ -1,4 +1,4 @@
-# Decision with a sanction check
+# Decision with a screening
 
 - id: 11111111-1111-1111-1111-111111111111
   org_id: 00000000-0000-0000-0000-000000000000
@@ -18,7 +18,7 @@
   pivot_value: 11111111-1111-1111-1111-111111111111
   created_at: RAW=now()
 
-# Decision without a sanction check
+# Decision without a screening
 
 - id: 22222222-2222-2222-2222-222222222222
   org_id: 00000000-0000-0000-0000-000000000000
