feat(metrics_collection): add configuration for metrics collection

--- a/.env.example
+++ b/.env.example
@@ -142,5 +142,9 @@ SENTRY_DSN=
 # OFFLOADING_SAVE_POINTS=1000
 # OFFLOADING_WRITES_PER_SEC=200
 
+# Configure metrics collection.
+# METRICS_COLLECTION_ENABLED=true
+# METRICS_COLLECTION_JOB_INTERVAL=1h
+
 # Abort and exit if license cannot be validated.
 KILL_IF_READ_LICENSE_ERROR=false
