feat(metrics_collection): implement metrics ingestion API and update configuration for metrics collection

--- a/.env.example
+++ b/.env.example
@@ -143,8 +143,11 @@ SENTRY_DSN=
 # OFFLOADING_WRITES_PER_SEC=200
 
 # Configure metrics collection.
+# By default, the metrics collection is enabled
 # METRICS_COLLECTION_ENABLED=true
 # METRICS_COLLECTION_JOB_INTERVAL=1h
+# If metrics collection is enabled, the metrics ingestion url must be set
+METRICS_INGESTION_URL=http://localhost:8080/metrics
 
 # Abort and exit if license cannot be validated.
 KILL_IF_READ_LICENSE_ERROR=false
