feat(bigquery): integrate BigQuery client for metrics ingestion and health checks

--- a/.env.example
+++ b/.env.example
@@ -151,3 +151,5 @@ METRICS_INGESTION_URL=http://localhost:8080/metrics
 
 # Abort and exit if license cannot be validated.
 KILL_IF_READ_LICENSE_ERROR=false
+
+# BIGQUERY_PROJECT_ID=
