--- a/.env.example
+++ b/.env.example
@@ -144,7 +144,7 @@ SENTRY_DSN=
 
 # Configure metrics collection.
 # By default, the metrics collection is enabled
-# DISABLED_TELEMETRY=false
+# DISABLE_TELEMETRY=false
 # METRICS_COLLECTION_JOB_INTERVAL=1h
 
 # Abort and exit if license cannot be validated.
