feat(env): add AI agent configuration options to .env.example and refactor GCP config initialization in worker.go

--- a/.env.example
+++ b/.env.example
@@ -151,3 +151,19 @@ SENTRY_DSN=
 KILL_IF_READ_LICENSE_ERROR=false
 
 # BIGQUERY_PROJECT_ID=
+
+# Configure AI agent settings
+# openai or aistudio 
+# AI_AGENT_MAIN_AGENT_PROVIDER_TYPE=
+# URL of the AI provider (can be left empty for aistudio)
+# AI_AGENT_MAIN_AGENT_URL=
+# API key of the AI provider
+# AI_AGENT_MAIN_AGENT_KEY=
+# Default model to use for the AI agent (e.g. gemini-2.5-flash)
+# AI_AGENT_MAIN_AGENT_DEFAULT_MODEL=
+# Backend of the AI provider (for aistudio) gemini or vertex
+# AI_AGENT_MAIN_AGENT_BACKEND=
+# Project ID of the AI provider (for aistudio)
+# AI_AGENT_MAIN_AGENT_PROJECT=
+# Location of the AI provider (for aistudio e.g. us-central1)
+# AI_AGENT_MAIN_AGENT_LOCATION=
