--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -17,16 +17,16 @@ jobs:
     
     services:
       postgres:
-        image: postgres:17
+        image: postgres:17-alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: marble_test
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 5s
+          --health-timeout 3s
+          --health-retries 3
         ports:
           - 5432:5432
     
@@ -40,14 +40,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
+          cache: true
+          cache-dependency-path: go.mod
 
-      - name: Cache Go modules and tools
+      - name: Cache Go tools only
         uses: actions/cache@v4
         with:
-          path: |
-            ~/go/pkg/mod
-            ~/go/bin
-          key: ${{ runner.os }}-go-tools-${{ hashFiles('**/go.mod') }}
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-bin-${{ hashFiles('**/go.mod') }}
 
       - name: Install goose
         run: |
