Make OTLP the default exporter. Add default span name sampling config. Add HTTP routes overrides to sampling file.

--- a/.env.example
+++ b/.env.example
@@ -126,8 +126,12 @@ FIREBASE_API_KEY=dummy
 # CLOUD_RUN_PROBE_PORT=9000
 
 # Configure various external integrations.
-# Send traces to Google Cloud Platform (see https://cloud.google.com/trace/docs/setup/go-ot). Requires Application Default Credentials.
+# Send traces to aither an OpenTelemetry-compatible GRPC collector (otlp, default) or to Google Cloud Platform (gcp) (see https://cloud.google.com/trace/docs/setup/go-ot).
+# The GCP collector requires Application Default Credentials.
 ENABLE_GCP_TRACING=false
+# TRACING_EXPORTER=otlp
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+
 SEGMENT_WRITE_KEY=
 DISABLE_SEGMENT=false
 SENTRY_DSN=
@@ -153,7 +157,7 @@ KILL_IF_READ_LICENSE_ERROR=false
 # BIGQUERY_PROJECT_ID=
 
 # Configure AI agent settings
-# openai or aistudio 
+# openai or aistudio
 # AI_AGENT_MAIN_AGENT_PROVIDER_TYPE=
 # URL of the AI provider (can be left empty for aistudio)
 # AI_AGENT_MAIN_AGENT_URL=
