feat(ai_agent): add kyc enrichment feature based on Perplexity

--- a/.env.example
+++ b/.env.example
@@ -171,3 +171,5 @@ KILL_IF_READ_LICENSE_ERROR=false
 # AI_AGENT_MAIN_AGENT_PROJECT=
 # Location of the AI provider (for aistudio e.g. us-central1)
 # AI_AGENT_MAIN_AGENT_LOCATION=
+# API key of the Perplexity API (for enrichment)
+# AI_AGENT_PERPLEXITY_API_KEY=
