--- a/pubapi/tests/fixtures/screening_matches.yml
+++ b/pubapi/tests/fixtures/screening_matches.yml
@@ -1,5 +1,5 @@
 - id: 11111111-1111-1111-1111-111111111111
-  sanction_check_id: 11111111-1111-1111-1111-111111111111
+  screening_id: 11111111-1111-1111-1111-111111111111
   opensanction_entity_id: ABC123
   status: pending
   query_ids: RAW=array['one', 'two']
@@ -7,7 +7,7 @@
     lorem: ipsum
 
 - id: 22222222-2222-2222-2222-222222222222
-  sanction_check_id: 11111111-1111-1111-1111-111111111111
+  screening_id: 11111111-1111-1111-1111-111111111111
   opensanction_entity_id: ABC123
   status: no_hit
   query_ids: RAW=array['one', 'two']
@@ -15,7 +15,7 @@
     lorem: ipsum
 
 - id: 33333333-3333-3333-3333-333333333333
-  sanction_check_id: 11111111-1111-1111-1111-111111111111
+  screening_id: 11111111-1111-1111-1111-111111111111
   opensanction_entity_id: ABC123
   status: no_hit
   query_ids: RAW=array['one', 'two']
