fixes in sql + env.example

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ PG_PASSWORD=marble
 PG_DATABASE=marble
 # For production, this SHOULD be set to 'require'
 PG_SSL_MODE=prefer
+# Optional: role to impersonate after acquiring a DB connection
+# PG_IMPERSONATE_ROLE=
 
 # Change the three settings below to create your initial organization and users.
 # The user must also have a matching account in the authentication store used (in Firebase, for example).
