--- a/.github/workflows/backend_test_workflow.yaml
+++ b/.github/workflows/backend_test_workflow.yaml
@@ -50,4 +50,4 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.5
-          args: --timeout=3m
+          args: --timeout=3m -v
