make ENV optional

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@
 # REQUIRED SETTINGS
 #
 
-# MUST be set to 'production' when not testing. In which case HTTPS will be assumed.
-ENV=development
 PORT=8080
 
 # Set this to the full url used by your users to access Marble's frontend
@@ -113,6 +111,9 @@ LOGGING_FORMAT=text
 #
 # OPTIONAL SETTINGS
 #
+
+# MUST be set to a value other than 'development' (or not set at all) when in production, or unsafe CORS settings will apply.
+ENV=development
 
 # Uncomment this line if you are using the Firebase emulator for testing.
 # FIREBASE_AUTH_EMULATOR_HOST="localhost:9099"
