--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -66,7 +66,8 @@
         "match_enrichment",
         "offloading",
         "test_run_summary",
-        "case_review"
+        "case_review",
+        "analytics_export"
       ]
     }
   ]
