Add an entrypoint to run a standalone analytics server.
This server will initialize the same way as the backend, but will only mount
misc. routes (healthchecks, version) and the analytics routes.

A new environment variable, on the regular backend, can indicate the base URL
to that analytics server, and will proxy analytics requests to that URL. All
relevant elements from the source requests are copied (path, query, headers).
The reponse will experience the same treatment, where the status, header and
body will be copied as is.

--- a/.github/workflows/backend_deploy_workflow.yaml
+++ b/.github/workflows/backend_deploy_workflow.yaml
@@ -89,6 +89,13 @@ jobs:
             --image=${{ env.VERSION_IMAGE }} \
             --region="europe-west1"
 
+      - name: Deploy server
+        run: |
+          gcloud run deploy marble-analytics-backend \
+            --quiet \
+            --image=${{ env.VERSION_IMAGE }} \
+            --region="europe-west1"
+
       - name: Deploy execute async worker service
         run: |
           gcloud run deploy marble-backend-worker \
