rename env var for tracing config, update .env.example, change default telemetry exporter to otlp

--- a/.env.example
+++ b/.env.example
@@ -129,12 +129,34 @@ FIREBASE_API_KEY=dummy
 # For example, Cloud Run requires all services to process liveness checks to keep running.
 # CLOUD_RUN_PROBE_PORT=9000
 
+# Authenticate with OpenID Connect SSO
+# See the configuration steps on https://docs.checkmarble.com/update/docs/sso-openid-connect#/
+
+# optional configuration for API and worker profiling
+# DEBUG_ENABLE_PROFILING=true
+# mandatory Bearer token to authenticate the utilitary /debug/pprof/* endpoints
+# DEBUG_PROFILING_TOKEN=replaceme
+
+
+# 'liveness' (only log liveness requests) || 'all' (log all requests) || any other value for no request logs (for example if the infrastructure layer already logs all requests)
+REQUEST_LOGGING_LEVEL=all
+# 'json' || 'text' (default) || 'gcp' (adapted logging keys for Stackdriver-compatible structured logging)
+LOGGING_FORMAT=text
+
+#####
 # Configure various external integrations.
-# Send traces to aither an OpenTelemetry-compatible GRPC collector (otlp, default) or to Google Cloud Platform (gcp) (see https://cloud.google.com/trace/docs/setup/go-ot).
+#####
+
+# Send traces to either an OpenTelemetry-compatible GRPC collector (otlp, default) or to Google Cloud Platform (gcp) (see https://cloud.google.com/trace/docs/setup/go-ot).
 # The GCP collector requires Application Default Credentials.
-ENABLE_GCP_TRACING=false
-# TRACING_EXPORTER=otlp
+ENABLE_TRACING=false
+# TRACING_EXPORTER=gcp|otlp
 # OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+# TRACING_SAMPLING_RATES={"/decisions": 0.05...} (json map of span names and sampling rates)
+
+# Collect prometheus metrics on decisions, ingestion, etc (full list is subject to change).
+# If enabled, the metrics can be pulled on the **unauthenticated** /metrics endpoint. We advise not to expose it on public networks.
+# ENABLE_PROMETHEUS=true
 
 SEGMENT_WRITE_KEY=
 DISABLE_SEGMENT=false
